[package]
name = "nyt_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
eframe = "0.33.3"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "blocking", "native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
include = [".env.example"]